add dark mode for web

--- a/css/comment.css
+++ b/css/comment.css
@@ -1,9 +1,9 @@
 :root{
-    --bg1: #FFFFFF;
-    --bg3: #F1F2F3;
-    --text2: #61666D;
-    --graph_bg_thick:#E3E5E7;
-    --line_regular: #E3E5E7;
+    /*--bg1: #FFFFFF;*/
+    /*--bg3: #F1F2F3;*/
+    /*--text2: #61666D;*/
+    /*--graph_bg_thick:#E3E5E7;*/
+    /*--line_regular: #E3E5E7;*/
 }
 
 .rua-emoji-panel{
