--- a/css/host.css
+++ b/css/host.css
@@ -205,7 +205,7 @@
 #emoji-selection {
     width: 300px;
     height: 350px;
-    background-color: #fff;
+    background-color: var(--bg1);
     position: fixed;
     z-index: 999999;
     border-radius: 12px;
@@ -240,10 +240,13 @@
     width: 200px;
     height: 50px;
     resize: none;
-    border: 1px solid #DDD;
+    //border: 1px solid #DDD;
     border-radius: 5px;
     position: absolute;
     padding: 5px 0 0 5px;
+    background-color: var(--bg1);
+    color: var(--Ga9);
+    border: 1px solid var(--Ga2);
 }
 
 #rua-dm-input-form:focus {
@@ -366,4 +369,12 @@
     background: #ff5e57;
     transition: 0.4s;
     z-index: 99999999;
+}
+
+#fullscreen-label{
+    color: var(--text3);
+}
+
+html[theme*="dark"] #emoji-tray, #input-button{
+    opacity: 0.8;
 }
